<?xml version="1.0"?>
<package format="2">
  <name>rqt_marine_sonar</name>
  <version>0.0.0</version>
  <description>Tools for displaying marine acoustic data</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>libqt5-charts-dev</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

